--- a/TestMapControl/TestMapControl.csproj
+++ b/TestMapControl/TestMapControl.csproj
@@ -52,7 +52,7 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="sAzureMap.cs" />
+    <Compile Include="sMap.cs" />
     <Compile Include="sMapControl.cs" />
     <Compile Include="sMapControl.Designer.cs">
       <DependentUpon>sMapControl.cs</DependentUpon>
