--- a/TestSocketServer/TestSocketServer.csproj
+++ b/TestSocketServer/TestSocketServer.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{AD765201-9DF2-432E-9317-7B0CF0710D13}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>SocketServerTest</RootNamespace>
-    <AssemblyName>SocketServerTest</AssemblyName>
+    <RootNamespace>TestSocketServer</RootNamespace>
+    <AssemblyName>TestSocketServer</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
