http 메시지 송신 추가

--- a/TestSocketClient/TestSocketClient.csproj
+++ b/TestSocketClient/TestSocketClient.csproj
@@ -83,6 +83,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <Import Project="..\sSocketHelper\sSocketHelper.projitems" Label="Shared" />
+  <Import Project="..\sCommunication\sCommunication.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
